feat(backend): 升级 Spring Boot 3.3.x 与 JDK 17
迁移 Jakarta、Security 6、springdoc/Knife4j、JJWT 0.12 与 J2Cache 自动配置（并入 common）；
补充 CI、Docker JDK 17 与迁移文档，归档 OpenSpec 变更并同步主规格。

Co-authored-by: Cursor <cursoragent@cursor.com>